--- a/Unidad 3/Diccionarios.ipynb
+++ b/Unidad 3/Diccionarios.ipynb
@@ -20,6 +20,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Hola': ['Hi', 'Hello'], 'Comer': ['eat']}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "d  = {'Hola'  : ['Hi', 'Hello'], \n",
+    "      'Comer' : ['eat'] }\n",
+    "len(d)       \n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
